<resources>
    <string name="header" translatable="false">mobiconnectsecrethash</string>
    <string name="facebook_app_id" translatable="false">4575198272598318</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb4575198272598318</string>
    <string name="base_url" translatable="false">https://vendors.magento2.click/</string>
    <string name="app_name">Locafy Seller</string>
    <string name="alert_name">Locafy Seller</string>
    <string name="dashboard">Dashboard</string>
    <string name="VendorProfile">Seller Profile</string>
    <string name="no_location_data_provided">No Location Provider</string>
    <string name="Products">Products</string>
    <string name="NewProduct">New Product</string>
    <string name="ManageProducts">Manage Products</string>
    <string name="productattribute">Product Attribute</string>
    <string name="ManageTickets">Manage Tickets</string>
    <string name="rma">RMA</string>
    <string name="rmatxt">RMA</string>
    <string name="managermarequest">Manage RMA Request</string>
    <string name="ManageAttribute">Manage Attribute</string>
    <string name="ManageAttributeSet">Manage Attribute Set</string>
    <string name="manageorders">Manage Orders</string>
    <string name="ManageOrders">Manage Orders</string>
    <string name="CancelOrders">Cancel Orders</string>
    <string name="ManageInvoice">Manage Invoice</string>
    <string name="ManageShipment">Manage Shipment</string>
    <string name="ManageCreditMemo">Manage Credit Memo</string>
    <string name="messaging">Messaging</string>
    <string name="vendoradmin">Admin Inbox</string>
    <string name="vendorcustomer">Customer Inbox</string>
    <string name="membershipplans">MemberShip Plans</string>
    <string name="promotions">Promotions</string>
    <string name="vendordeals">Seller Deals</string>
    <string name="createdeals">Create Deals</string>
    <string name="listdeals">List Deals</string>
    <string name="dealsettings">Deal Settings</string>
    <string name="Transactions">Transactions</string>
    <string name="Transactions_title">Transactions</string>
    <string name="RequestPayments">Request Payments</string>
    <string name="RequestPaymentsMenu">Request Payments</string>
    <string name="ViewTransactaions">View All Transactions</string>
    <string name="Reports">Reports</string>
    <string name="app_title">Advance Report</string>
    <string name="filter">Filter</string>
    <string name="OrderReports">Order Reports</string>
    <string name="ProductReports">Product Reports</string>
    <string name="Settings">Settings</string>
    <string name="TransactaionSettings">Transaction Settings</string>
    <string name="ShippingSettings">Shipping Settings</string>
    <string name="ShippingMethods">Shipping Methods</string>
    <string name="storepickup">Store Pick Up</string>
    <string name="viewstores">View Stores</string>
    <string name="advancereport">Advance Report</string>
    <string name="vendorcms">Seller CMS</string>
    <string name="managevendorcms">Manage Seller CMS</string>
    <string name="managestaticblocks">Manage Static Blocks</string>
    <string name="selectandsell">Select And Sell</string>
    <string name="title_activity_vendor_registration">Seller Registration</string>
    <string name="VendorLogin">Seller Login</string>
    <string name="vendorlogintext">If you have a Seller account with us, please log in.</string>
    <string name="emailhint">Email</string>
    <string name="Password">Password</string>
    <string name="logintext">Login</string>
    <string name="forgotpass">Forgot Your Password ?</string>
    <string name="Vendorcreateaccount">Create Your Account Here</string>
    <string name="Persobalinfo">Personal Information *</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="news">Sign Up for Newsletter</string>
    <string name="vendorinfo">Seller Information *</string>
    <string name="publicname">PublicName *</string>
    <string name="shopurl">Shop Url *</string>
    <string name="shopurlhint">Please enter your Shop URL Key. For example \"my-shop-url\".</string>
    <string name="vendorlogininfo">Login Information *</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submittext">Submit</string>
    <string name="empty">Please Provide Some Value!</string>
    <string name="invalidemail">Please enter a valid email</string>
    <string name="requiredemail">Email is required.</string>
    <string name="shortpass">Please enter password with at least 8 chars.</string>
    <string name="passnotmatch">Password and confirm password are not matching</string>
    <string name="VendorStatus">Seller Status</string>
    <string name="vendorapplication">Your Seller application is pending.</string>
    <string name="hellovendortext">Hello</string>
    <string name="approvaltext">Your seller account is under admin approval.</string>
    <string name="refresh">Refresh</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="SignOut">Log Out</string>
    <string name="noti">Notification</string>
    <string name="profile">Profile</string>
    <string name="approved">Approved</string>
    <string name="forgotpas">Forgot Your Password?</string>
    <string name="retrieve">Retrieve your password here</string>
    <string name="emailretievetag">Please enter your email below and we will send you a new password.</string>
    <string name="dashboardtag">Dashboard</string>
    <string name="pendingamounttag">Total Pending Amount!</string>
    <string name="earnedamounttag">Total Earned Amount!</string>
    <string name="eorderplacedtag">Total Orders Placed!</string>
    <string name="salestag">Sales Analytics</string>
    <string name="producttag">Products Status</string>
    <string name="viewdetails">View Details</string>
    <string name="latestordertag">Latest Orders</string>
    <string name="orderdid">Order ID</string>
    <string name="purchasedon">Purchased On</string>
    <string name="billingname">Billing Name</string>
    <string name="nerearned">Net Earned</string>
    <string name="orderstattus">Order Status</string>
    <string name="CountryWiseOrders">See State Wise Orders Here</string>
    <string name="editetxt">Edit</string>
    <string name="VendorProfileView">Seller Profile</string>
    <string name="generalinfotext">General Information</string>
    <string name="Created">Created At</string>
    <string name="Status">Status</string>
    <string name="PublicName">Public Name</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="totalproductsold">Total Products Sold!</string>
    <string name="addresstag">Address</string>
    <string name="City">City</string>
    <string name="ZipPostalCode">Zip/Postal Code</string>
    <string name="Country">Country</string>
    <string name="comapnylogotag">Company Logo</string>
    <string name="companybabbertag">Company Banner</string>
    <string name="Gender">Gender</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="StateTag">State</string>
    <string name="CompanyNametag">Company Name</string>
    <string name="Abouttag">About</string>
    <string name="supportnumbertag">Support Number</string>
    <string name="supportemailtag">Support Email</string>
    <string name="metakeywordtag">Meta Keywords</string>
    <string name="MetaDescriptiontag">Meta Description</string>
    <string name="OrderList">Order List</string>
    <string name="Order_id">Order Id #</string>
    <string name="grandTotal">Grand Total:</string>
    <string name="grandTotalorder">Grand Total:</string>
    <string name="commission">Commission Fee:</string>
    <string name="netearned">Net Earned:</string>
    <string name="orderpaymentstatus">Order Payment Status:</string>
    <string name="vendorpaymentstatus">Vendor Payment Status:</string>
    <string name="Filter">Filter</string>
    <string name="Reset_filter">Reset Filter</string>
    <string name="OrderInformation">Order Information</string>
    <string name="OrderDate">Order Date</string>
    <string name="OrderStatus">Order Status</string>
    <string name="PurchasedFrom">Purchased From</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="BillingAddress">Billing Address</string>
    <string name="ShippingMethod">Shipping Method</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="Subtotal">Subtotal</string>
    <string name="GrandTotal">Grand Total</string>
    <string name="GrandTotalEarned">Grand Total</string>
    <string name="CommissionFee">Commission Fee</string>
    <string name="NetEarned">Net Earned</string>
    <string name="Discount">Discount</string>
    <string name="TaxAmount">Tax Amount</string>
    <string name="CreditCardType">Credit Card Type:</string>
    <string name="CreditCardNumber">Credit Card Number:</string>
    <string name="NameontheCard">Name On The Card</string>
    <string name="ProductInfo">Product Information</string>
    <string name="Paymentinfo">Payment Information</string>
    <string name="PAYMENTSSTATISTICS">PAYMENTS STATISTICS</string>
    <string name="TotalPendingAmount">Total Pending Amount</string>
    <string name="TotalPendingAmountTag">Total Pending Amount</string>
    <string name="TotalRequestedAmount">Total Requested Amount</string>
    <string name="PENDINGAMOUNT">PENDING AMOUNT(S)</string>
    <string name="TotalEarnedAmount">Total Earned Amount</string>
    <string name="TRANSACTIONSSTATISTICS">TRANSACTIONS STATISTICS</string>
    <string name="PendingTransfers">Pending Transfers</string>
    <string name="CreatedAt">Created At</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="SinglePaymentMode">Payment Mode</string>
    <string name="TransactionId">Transaction Id</string>
    <string name="Amount">Amount</string>
    <string name="AdjustmentAmount">Adjustment Amount</string>
    <string name="NetAmount">Net Amount</string>
    <string name="BenificiaryDetails">BENEFICIARY DETAILS</string>
    <string name="productname">Name</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="Type">Type</string>
    <string name="skutag">Sku</string>
    <string name="Action">Action</string>
    <string name="SKU">SKU</string>
    <string name="title">Title</string>
    <string name="id">Id</string>
    <string name="CustomerEmail">Customer Email</string>
    <string name="nickname">Nickname</string>
    <string name="review">Review</string>
    <string name="visiblity">Visibility</string>
    <string name="auction_price">Auction Price</string>
    <string name="winning_price">Winning Price</string>
    <string name="binding_date">Binding Date</string>
    <string name="evaluation_number">Evaluation number</string>
    <string name="images">Images</string>
    <string name="apply_single_set_of_images_to_all_skus">Apply single set of images to all SKUs</string>
    <string name="apply_unique_images_by_attribute_to_each_sku">Apply unique images by attribute to each SKU</string>
    <string name="skip_image_uploading_at_this_time">Skip image uploading at this time</string>
    <string name="select_attribute">Select attribute</string>
    <string name="apply_single_price_to_all_skus">Apply single price to all SKUs</string>
    <string name="apply_unique_prices_by_attribute_to_each_sku">Apply unique prices by attribute to each SKU</string>
    <string name="skip_price_at_this_time">Skip price at this time</string>
    <string name="apply_single_quantity_to_each_skus">Apply single quantity to each SKUs</string>
    <string name="apply_unique_quantity_by_attribute_to_each_sku">Apply unique quantity by attribute to each SKU</string>
    <string name="skip_quantity_at_this_time">Skip quantity at this time</string>
</resources>