<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Images Section -->
        <TextView
            android:text="@string/images"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/imageRadioGroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioImageSingle"
                android:text="@string/apply_single_set_of_images_to_all_skus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioImageAttribute"
                android:text="@string/apply_unique_images_by_attribute_to_each_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioImageSkip"
                android:text="@string/skip_image_uploading_at_this_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />

            <TextView
                android:id="@+id/imageAttributeText"
                android:text="@string/select_attribute"
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/imageAttributeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:id="@+id/imageAttributeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>
        </RadioGroup>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"
            android:layout_marginVertical="8dp" />

        <!-- Price Section -->
        <TextView
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/priceRadioGroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioPriceSingle"
                android:text="@string/apply_single_price_to_all_skus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioPriceAttribute"
                android:text="@string/apply_unique_prices_by_attribute_to_each_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioPriceSkip"
                android:text="@string/skip_price_at_this_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <TextView
                android:id="@+id/priceAttributeText"
                android:text="@string/select_attribute"
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/priceAttributeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="2dp"
                />

            <LinearLayout
                android:id="@+id/priceAttributeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>
        </RadioGroup>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"
            android:layout_marginVertical="8dp" />

        <!-- Quantity Section -->
        <TextView
            android:text="@string/qty"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/quantityRadioGroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioQuantitySingle"
                android:text="@string/apply_single_quantity_to_each_skus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioQuantityAttribute"
                android:text="@string/apply_unique_quantity_by_attribute_to_each_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioQuantitySkip"
                android:text="@string/skip_quantity_at_this_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
            <TextView
                android:id="@+id/quantityAttributeText"
                android:text="@string/select_attribute"
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/quantityAttributeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:id="@+id/quantityAttributeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="8dp"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>