<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/editext_border"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.486618" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/SKU"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/auction_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sku"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/auctionprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/sku"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/winning_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auctionprice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/winningprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/auctionprice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/Status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winningprice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/winningprice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/binding_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/binding_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/status"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/CustomerEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binding_date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/customer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/verticalguideline"
        app:layout_constraintTop_toBottomOf="@+id/binding_date"/>


</androidx.constraintlayout.widget.ConstraintLayout>